<resources>
    <string name="app_name">FirstTest</string>
    <string name="guesswhere">GuessWhere</string>
    <string name="login">Login</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register_instead">Register Instead</string>
    <string name="play">play</string>
    <string name="hello">Hello, ...</string>
    <string name="logout">logout</string>
    <string name="change_username">change Username</string>
    <string name="change_password">change password</string>
    <string name="new_password">New Password</string>
    <string name="todo">TODO</string>
    <string name="statistics">statistics</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="challenge_user">Challenge User</string>
</resources>